⚙ :: 멀티모듈 생성 및 코틀린 dsl 설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "GCMS-ANDMIN"
 include ':app'
+include ':presentation'
+include ':domain'
+include ':data'
