--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -93,4 +93,6 @@ dependencies {
 
     implementation "com.github.ParkSangSun1:NotificationBarCustom:1.0.3"
     implementation "com.github.ParkSangSun1:CountNumberEvent:1.0.4"
+    // RecyclerView
+    implementation (AndroidX.RECYCLER)
 }
